@@ -8,6 +8,7 @@ Revision history for Perl extension Fl
         - Fl::Dial - Circular dial to control a single floating point value
         - Fl::FillDial - Fl::Dial with a filled arc
         - Fl::LineDial - Fl::Dial with a single line to mark the current value
+        - Fl::Roller - '3D' dial to control a floating point value
 
 0.99.7 2016-05-18T00:20:32Z
 
